fix: correct input visibility logic in weekly history component and style input[type=number]

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,9 +26,9 @@ margin: 0;
 }
 
 /* Firefox */
-/*input[type=number] {*/
-/*-moz-appearance: textfield !important;*/
-/*}*/
+input[type=number] {
+-moz-appearance: textfield !important;
+}
 
 .ng-select .ng-select-container {
 color: var(--color-gray-100) !important;
